--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3",
-    "uuid": "^9.0.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.3"
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
+    "webpack": "^5.75.0",
+    "wepack-cli": "^0.0.1-security"
   },
   "type": "module",
+  "devDependencies": {
+    "webpack-cli": "^5.0.0"
+  },
   "scripts": {
-    "build": "npx webpack",
-    "start": "npm run build && nodemon server.js"
+    "start": "npx webpack && nodemon server.js"
   }
 }
